STEP 5/OPA Usecases/Restrict Manager Role/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRoleAuth
metadata:
  name: block-users
spec:
  match:
    kinds:
      - apiGroups: ["rbac.authorization.k8s.io"]
        kinds: ["*"]
  parameters:
          users:
                  - "sid"
